java/kubernetes-java-deployment-demo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-demo
  labels:
    name: kubernetes-demo
    environment: demo
