java/kubernetes-java-deployment-demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-demo-service
  namespace: kubernetes-demo
  labels:
    app: kubernetes-demo
spec:
  type: ClusterIP
  selector:
    app: kubernetes-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  sessionAffinity: None
